config/jwker/controller/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jwker
  name: jwker
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: jwker
  template:
    metadata:
      labels:
        app: jwker
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: TOKENDINGS_URL
              value: http://tokendings.tokenx-api:8080
            - name: LEADER_ELECTION
              value: "true"
            - name: GOMEMLIMIT
              value: 230MiB
          image: ghcr.io/nais/jwker:non.existing.tag
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8180
              scheme: HTTP
            initialDelaySeconds: 30
          name: jwker
          ports:
            - containerPort: 8180
              name: probes
            - containerPort: 8181
              name: metrics
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8180
              scheme: HTTP
            initialDelaySeconds: 30
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp
              name: writable-tmp
      imagePullSecrets:
        - name: github-auth
      priorityClassName: skip-critical
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: jwker
      volumes:
        - emptyDir: {}
          name: writable-tmp
