config/jwker/controller/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jwker
spec:
  egress:
    - ports:
        - port: 8080
          protocol: TCP
        - port: 15020
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tokenx-api
          podSelector:
            matchLabels:
              app: tokendings
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana-alloy
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: alloy
              app.kubernetes.io/name: alloy
      ports:
        - port: 8181
          protocol: TCP
  podSelector:
    matchLabels:
      app: jwker
  policyTypes:
    - Ingress
    - Egress
